--- a/my-app/app.json
+++ b/my-app/app.json
@@ -4,10 +4,8 @@
     "web": {
       "bundler": "metro"
     },
-    "plugins": [
-      "expo-router"
-    ],
-    "name": "my-app",
-    "slug": "my-app"
+    "plugins": ["expo-router"],
+    "name": "FindJOB",
+    "slug": "FindJOB"
   }
 }
